--- a/Tarea 1/3d_cube.html
+++ b/Tarea 1/3d_cube.html
@@ -3,8 +3,8 @@
 <head>
 <title>3D Cube</title>
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-<script src="../libs/gl-matrix/gl-matrix.js"></script>
-<script src="../libs/jquery-3.4.1/jquery-3.4.1.min.js"></script>
+<script src="./libs/gl-matrix/gl-matrix.js"></script>
+<script src="./libs/jquery-3.4.1/jquery-3.4.1.min.js"></script>
 <script src="3d_cube.js"></script>
 
 <script type="text/javascript">
